<resources>
    <string name="app_name">ParkingFinder</string>
    <string name="title_activity_maps">Map</string>
    <string name="carNum">Save Vehicle</string>
    <string name="speechRec">Speech Recognition Button</string>
    <string name="map">Maps</string>
    <string name="saveLoc">Save Location</string>
    <string name="settings">Settings</string>
    <string name="setGreek">Use Greek</string>
    <string name="setEnglish">Use English</string>
    <string name="saveCarId">Make Default</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="parkingSpots">All Parking Spots</string>
</resources>
